# Animal-Farm

./: .clang-tidy  About.md  CMakeLists.txt  LICENSE.md  README.md  STATISTICS.md  WEEKLY_PROGRESS.md
src/: catWrangler.cpp  config.h  hello.cpp  main_catEmpire.cpp  main_catInfinitum.cpp  main_catWrangler.cpp
src/Animal/: Animal.cpp  Animal.h
src/Animal/Cat/: Cat.cpp  Cat.h
src/Animal/Mammal/: Mammal.h
src/Container/: Container.h  Node.h  SingleLinkedList.cpp  SingleLinkedList.h
src/Legacy/: ArrayDB.cpp  ArrayDB.h  Cat.cpp  Cat.h  epicCats.cpp
src/Utility/: About.md  Gender.cpp  Gender.h  Name.h  Trim.cpp  Trim.h
tests/: CMakeLists.txt  test_Animal.cpp  test_Cat.cpp  test_Gender.cpp  test_Legacy_epicCats.cpp  test_LinkedList.cpp  test_Mammal.cpp  test_Name.cpp  test_Trim.cpp
